--- a/index.html
+++ b/index.html
@@ -30,22 +30,27 @@
 			<h1>
 				Current Word
 			</h1>
-			<div id="number-of-guesses"></div>
-			<h1>
-				Number of Guesses left
+			<h1> Number of Guesses left
+				<div id="number-of-guesses"></div>
 			</h1>
-			<div id="letters-guessed"></div>
 			<h1>
 				Letters Already Guessed
 			</h1>
+			<div id="letters-guessed"></div>
+			<h1>
+				Points
+			</h1>
+			<div id="points"></div>
 			<div id="princesspoints"></div>
 			<div id="bellepoints"></div>
 			<div id="arielpoints"></div>
 			<div id="cinderellapoints"></div>
 			<h1>
-				Points
+				Losses
 			</h1>
-			
+			<div id="losses"></div>
+			<h1> Restart </h1>
+			<div id="restart"></div>
 		</div>
 	</div>
 	</div>
